Fixed menu when admin panel is visible

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/**
- * This file should get overwritten if Method 1 is used. If Method 2 is chosen,
- * remove this comment and start adding your styles to this file.
- */
+
+body.toolbar, body.toolbar-drawer {
+  padding-top: 128px !important;
+}
